# votte

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  COPYRIGHT.md  README.md  build.sh  makefile  pyproject.toml
.github/: release.yml
.github/scripts/: translate_readme.py
benchmarks/: benchmark_params.toml
docs/: CONTRIBUTING.md  run_notte_with_external_browsers.md  run_ollama_local_models.md  scraping_tutorial.md  sdk_tutorial.md  setup.md
examples/: cli_agent.py
examples/auth-vault-agent/: .env.example  agent.py
examples/email-notifier-agent/: .env.example  agent.py
examples/github-auto-issues-trending-repos/: .env.example  agent.py
examples/leetcode-agent/: .env.example  agent.py
examples/order-on-ubereats/: .env.example  agent.py
examples/scrape-nike-products/: agent.py
examples/star-our-repo/: .env.example  agent.py
src/votte/: __init__.py
